# ComputationPushdownS3Select

./: CMakeLists.txt  README.md
Source/: ParquetRequest.cpp  ParquetServer.cpp  ParquetServer.cpp~  SimulateManyRequests.cpp
